<resources>
    <string name="app_name">Softwear</string>

    <string name="hello_guest">Hello Guest!</string>
    <string name="hello_test">Welcome to the test page!</string>
    <string name="action_settings">Settings</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="submit_btn">Submit</string>
    <string name="register_txt">REGISTER</string>
    <string name="fName_text">First Name</string>
    <string name="lName_text">Last Name</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="username_text">Username</string>
    <string name="user_login">Login</string>
    <string name="user_logout">Logout</string>
    <string name="user_register">Register</string>
    <string name="user_cart">Cart</string>
    <string name="user_search">Search</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_register">Register</string>
    <string name="action_cart">Cart</string>
    <string name="action_account">Account</string>
    <string name="action_product">Product</string>
    <string name="action_about_us">About us</string>
    <string name="action_search">Search</string>
    <string name="action_category">Category</string>
    <string name="hint">Search products..</string>
    <string name="try_me">Add to Cart</string>

    <string name="currency"> $</string>
    <string name="percent"> %</string>

</resources>
