<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_login" android:title="@string/action_login"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_register" android:title="@string/action_register"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_search" android:title="@string/action_search"
        android:orderInCategory="100" android:icon="@drawable/search" app:showAsAction="always" />
    <item android:id="@+id/action_cart" android:title="@string/action_cart"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:orderInCategory="100" android:icon="@drawable/cart0" app:showAsAction="always" />
    <item android:id="@+id/action_logout" android:title="@string/action_logout"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
