<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="MainActivity"
    android:id="@+id/register">

    <TextView
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_txt"
        android:id="@+id/textView_register"
        android:layout_above="@+id/editText_firstName"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_btn"
        android:id="@+id/logR"
        android:onClick="userRegister"
        android:layout_marginTop="86dp"
        android:layout_below="@+id/editText_password"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_firstName"
        android:hint="@string/fName_text"
        android:inputType="textPersonName"
        android:layout_above="@+id/editText_lastName"
        android:layout_alignStart="@+id/textView_register"
        android:layout_alignEnd="@+id/textView_register" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_lastName"
        android:hint="@string/lName_text"
        android:inputType="textPersonName"
        android:layout_above="@+id/editText_email"
        android:layout_alignStart="@+id/editText_firstName"
        android:layout_alignEnd="@+id/editText_firstName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_email"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:layout_above="@+id/editText_password"
        android:layout_alignStart="@+id/editText_lastName"
        android:layout_alignEnd="@+id/editText_lastName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_password"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:layout_above="@+id/editText_username"
        android:layout_alignStart="@+id/editText_email"
        android:layout_alignEnd="@+id/editText_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_username"
        android:hint="@string/username_text"
        android:inputType="textPersonName"
        android:layout_marginBottom="141dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editText_password"
        android:layout_alignEnd="@+id/editText_password" />

</RelativeLayout>
